Add disc, track, and year columns
