# entity/src/track.rs
@@ -15,6 +15,9 @@ pub struct Model {
     pub title: String,
     pub artist: String,
     pub album: String,
+    pub disc_number: Option<i32>,
+    pub track_number: Option<i32>,
+    pub year: Option<i32>,
     pub genre: String,
     pub album_artist: String,
     pub publisher: String,
