# src/api.rs
@@ -53,6 +53,9 @@ pub struct TrackResponse {
     pub sample_rate: i32,
     pub bit_depth: i32,
     pub channels: i32,
+    pub disc_number: Option<i32>,
+    pub track_number: Option<i32>,
+    pub year: Option<i32>,
     pub tags: Value,
     pub created: chrono::DateTime<chrono::Utc>,
     pub modified: chrono::DateTime<chrono::Utc>,
@@ -80,6 +83,9 @@ impl From<track::Model> for TrackResponse {
             sample_rate: model.sample_rate,
             bit_depth: model.bit_depth,
             channels: model.channels,
+            disc_number: model.disc_number,
+            track_number: model.track_number,
+            year: model.year,
             tags,
             created: model.created,
             modified: model.modified,
